# sdk-python

./: README.md  pyproject.toml
docs/modules/: customer.md  order.md  self.md
src/yield_sdk/: __init__.py  api_client.py  api_result.py  client.py  http.py  version.py
src/yield_sdk/modules/: __init__.py
src/yield_sdk/modules/customer/: __init__.py  customer_client.py  customer_payloads.py
src/yield_sdk/modules/order/: __init__.py  order_client.py  order_payloads.py
src/yield_sdk/modules/self/: __init__.py  self_client.py  self_payloads.py
src/yield_sdk/types/: __init__.py  cursor_payload.py  money.py  money_payload.py  page.py
src/yield_sdk/utils/: import_utils.py  type_utils.py
tests/: test_basic.py
